# pythonDeveloper

1_learn-the-basics/: learn_basics.py
2_data-structures-and-algorithms/: data_structures_algorithms.py
3_modules/: modules.py
Data Structures & Algorithms/ds_algritgms/2_Programming Fundamentals/5_Pseudo Code/: pesudocode.py
Data_Structures_&_Algorithms/ds_algritgms/2_Programming Fundamentals/3_Functions/: functions_dsa.py
Python Developer/2_Data Structures and Algorithms/: data_structures_algorithms.py
Python Developer/3_Modules/: modules.py
Python Developer/4_Lambdas/: real_py_lambda.py
Python_Developer/1_Python/: learn_basics.py
Python_Developer/3_Modules/Python - Built-In Modules/: built_in.py
Python_Developer/4_Lambdas/: Makefile  real_py_lambda.py
Python_Developer/5_Decorators/: geek_decoratoes.py
Python_Developer/6_Iterators/: iteratos_w3schools.py
dsa_python/ds_algritgms/4_Basic Data Structures/: basic_data_structures.py
python_developer/10_list_comprehensions/: main.py
python_developer/11_generator_expressions/: main.py
python_developer/12_paradigmas_programming/: main.py
python_developer/2_Data Structures and Algorithms/: data_structures_algorithms.py
python_developer/3_Modules/: fibo.py  modules_programiz.py
python_developer/4_Lambdas/: lambda_module.py  lambda_unittest.py  real_py_lambda.py
python_developer/7_oop/: Inheritance_oop.py  methods_and_dunder.py  oop_simples.py
python_developer/8_pm/: doc.md  main.py
python_developer/9_cpm/: doc.md  main.py  pyproject.toml
(+1 files in other folders)
